--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
   "homepage": "https://github.com/lufernando100/workshop-api-testing-js#readme",
   "devDependencies": {
     "chai": "^4.2.0",
+    "http-status-codes": "^1.4.0",
     "mocha": "^6.2.2"
+  },
+  "dependencies": {
+    "superagent": "^5.1.2",
+    "superagent-promise": "^1.1.0"
   }
 }
